2010-02-26  Sam Steingold  <sds@gnu.org>

	* configure.in: call gl_FCNTL_O_FLAGS, needed by the new localcharset.c

2010-02-26  Sam Steingold  <sds@gnu.org>

	Handle headers placed in build-aux by gnulib
	* m4/clisp.m4 (CL_CLISP): add AC_SUBST(CLISP_LIBDIR)
	* Makefile.devel ($(MAKEFILE_IN)): manually substitute
	CLISP_LIBDIR for $(top_srcdir)/src/build-aux et al
	* modules/regexp/Makefile.in, modules/syscalls/Makefile.in:
	* modules/wildcard/Makefile.in: use CLISP_LIBDIR when passing
	CFLAGS to make in gllib
	* makemake.in ($(SUBDIRS)): pass CLISP_LIBDIR
	(BUILD_AUX): add build-aux headers, found in Makefile.am's

2010-02-25  Sam Steingold  <sds@gnu.org>

	Ensure that (CLOSE s :ABORT T) never signals.
	* stream.d (ChannelStream_fini): accept abort argument and do not
	signal errors when it is true
	(close_ichannel): pass abort to ChannelStream_fini
	(close_ochannel): do not call oconv_unshift_output_unbuffered() if
	abort is true; pass abort to ChannelStream_fini
	(close_buffered): do not call oconv_unshift_output_buffered() and
	buffered_flush_everything(); pass abort to ChannelStream_fini
	(SET-STREAM-EXTERNAL-FORMAT): pass abort=0 to ChannelStream_fini
	(builtin_stream_close): do not call harden_elastic_newline if
	abort is true

2010-02-25  Sam Steingold  <sds@gnu.org>

	* stream.d (stream_lend_handle): support sockets

2010-02-23  Sam Steingold  <sds@gnu.org>

	* Makefile.devel (GNULIB_MODULES): add nl_langinfo, which is now
	required by regexp, so that i18n have it always available
	* modules/i18n/configure.in: call gl_FUNC_NL_LANGINFO
	* modules/i18n/gettext.c [!WIN32_NATIVE]:
	assume that nl_langinfo is always present

2010-02-23  Sam Steingold  <sds@gnu.org>

	update gnulib
	* modules/regexp/gllib/Makefile.am, modules/regexp/gllib/regcomp.c:
	* modules/regexp/gllib/regex_internal.c:
	* modules/regexp/gllib/regex_internal.h, modules/regexp/gllib/regexec.c:
	* modules/regexp/gllib/stdlib.in.h, modules/regexp/gllib/unistd.in.h: